--- a/TODO
+++ b/TODO
@@ -1,22 +1,21 @@
-Heuristocratic.Midi
+midi-parser
 
 - tests...
 - calculate note length and add to note-on events
-- make parsing more functional
 - denote tracks with no note events
 
-Heuristocratic.MidiVisualizer
+midi-visualizer
 
 - tests...
 - implement configurable filters (by track)
 - implement pause/resume
 - subdivide drums in meaningful way
 
-Heuristocratic.MidiRenderPipeline
+midi-visualizer/render-pipeline
 
 - subdivide a polyphonic track into notes
 - tests...
 
-Heuristocratic.utils
+utils
 
 - tests...
